--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,4 @@ plugins:
 
 # Site settings
 description: >- # this means to ignore newlines until "baseurl:"
-github_username:  your_github_username   
+github_username:  ramezian1  
