--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,5 @@ plugins:
 
 # Site settings
 description: >- # this means to ignore newlines until "baseurl:"
-github_username:  ramezian1  
+github_username:  ramezian1
+linkedin_username: robert-mezian
