--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ plugins:
   - jekyll-paginate
 
 # Site settings
+title: "Robert Mezian"
 description: >- # this means to ignore newlines until "baseurl:"
 github_username:  ramezian1
 linkedin_username: robert-mezian
