--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,18 @@ plugins:
 
 # Site settings
 title: "Robert Mezian"
-description: >- # this means to ignore newlines until "baseurl:"
+description: >- 
+  # this means to ignore newlines until "baseurl:"
 include:
   - assets/custom.css
-github_username:  ramezian1
+github_username: ramezian1
 linkedin_username: robert-mezian
+
+# Navigation Links
+nav:
+  - title: Home
+    url: /
+  - title: Resume
+    url: /resume.html
+  - title: Resume
+    url: (https://github.com/user-attachments/files/18611133/Resume.New.2025.pdf)
